--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
+body {
+  background: #F0ECE3;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -21,18 +15,47 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
-.App-link {
-  color: #61dafb;
+.Header {
+  padding: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* background: green; */
+
+}
+
+.card .card-detail {
+  /* background: #AEFEFF; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  width: 20%;
+  border: solid 1px #DFD8CA;
+  
+ 
+}
+
+.card-detail button{
+  margin: 5px;
+  width: 100px;
+  /* background: yellow; */
+  flex-grow: 1;
+  flex-basis: 40%;
+}
+
+.card-detail h4{
+  margin: 5px;
+  /* background: purple; */
+  flex-grow: 1;
+  flex-basis: 40%;
 }
